--- a/restaurant/src/App.css
+++ b/restaurant/src/App.css
@@ -62,11 +62,11 @@ address{
 
 .car{
   background: rgb(6, 46, 99);
-  text: white;
+  color: white;
 }
 
 .cap{
-  text-align: left;
+  text-align: start;
   width:600px;
 }
 
@@ -77,4 +77,38 @@ address{
 
 .textCont{
   float: left !important;
+}
+
+.carHeader{
+  background: rgb(6, 46, 99); 
+  font-size: 50px;
+  color: white;
+  
+}
+.carBody{
+  background: white;
+  font-size: 30px;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 
+              'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  color:rgb(44, 13, 6);
+}
+
+.card{
+  margin-top: 20px;
+  margin-bottom: 50px;
+}
+
+.heading{
+  margin-top: 20px;
+  color: red;
+}
+
+.button{
+  background: rgb(148, 7, 7);
+  color: white;
+  margin-left: 15px;
+  height: 50px;
+  width: 120px;
+  font-size: 20px;
+  margin-bottom: 10px;
 }
